--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-redux": "^7.1.3",
+    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
